<?xml version="1.0"?>
<package format="2">
  <name>rospy_zmq_examples</name>
  <version>0.0.0</version>
  <description>Control libraries demos included in a ROS package with ZMQ communication</description>
  <maintainer email="dominic.reber@epfl.ch">"Dominic Reber"</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
